# Extended-Raft-Consensus-Protocol

./: CMakeLists.txt  README.md  install_gcc-13.sh  setup.sh
app/: CMakeLists.txt  latency.cpp  multinode.cpp  node.cpp  tput.cpp
bench/: lat-tput.py  plot-task4.py
inc/common/: common.hpp  config.hpp  logger.hpp
inc/common/utils/: net_intercepter.hpp  rand_gen.hpp
inc/rafty/: raft.hpp  rpcService.hpp
inc/rafty/impl/: raft.ipp
inc/toolings/: config_gen.hpp  msg_queue.hpp  raft_wrapper.hpp  test_config.hpp  test_ctrl.hpp
integration_tests/: CMakeLists.txt  raft_test.cpp
proto/: CMakeLists.txt  raft.proto  tester.proto
src/: CMakeLists.txt  raft copy.cpp  raft.cpp  rpcService.cpp
submitter/: check.sh  env  packer.sh  submit.sh
unittests/: CMakeLists.txt
unittests/internals/: CMakeLists.txt  test_msg_queue.cpp
